crates/antlr-rust-codegen/src/generator/snapshots/antlr_rust_codegen__generator__tests__multi_alternative_label_inner_choice_arity_context.snap
---
source: crates/antlr-rust-codegen/src/generator/tests.rs
expression: "rendered_context_impl(&rendered, \"InnerChoiceArityContext\")"
---

    pub fn unary_children(&self) -> impl Iterator<Item = UnaryContext<'a>> + '_ {
        __rule_children(self.__node, 4)
            .map(move |node| UnaryContext::__from_child_node(node, self.__invocation_states.as_deref()))
    }
    pub fn param(&self) -> Option<ParamContext<'a>> {
        __rule_children(self.__node, 8)
            .next()
            .map(|node| ParamContext::__from_child_node(node, self.__invocation_states.as_deref()))
    }
    pub fn num_tokens(&self) -> impl Iterator<Item = TerminalNode<'a>> + '_ {
        __token_children(self.__node, 14).map(TerminalNode::new)
    }
}

#[allow(dead_code, clippy::all)]
impl<'a> InnerChoiceArityContext<'a, ValidatedTreeContext> {
    pub fn unary_children(&self) -> impl Iterator<Item = UnaryContext<'a, ValidatedTreeContext>> + '_ {
        __rule_children(self.__node, 4)
            .map(move |node| UnaryContext::<ValidatedTreeContext>::__from_validated_child_node(node, self.__invocation_states.as_deref()))
    }
    pub fn param(&self) -> Option<ParamContext<'a, ValidatedTreeContext>> {
        __rule_children(self.__node, 8)
            .next()
            .map(|node| ParamContext::<ValidatedTreeContext>::__from_validated_child_node(node, self.__invocation_states.as_deref()))
    }
    pub fn num_tokens(&self) -> impl Iterator<Item = TerminalNode<'a>> + '_ {
        __token_children(self.__node, 14).map(TerminalNode::new)
    }
}
