crates/antlr-rust-codegen/src/generator/snapshots/antlr_rust_codegen__generator__tests__multi_alternative_label_mixed_context.snap
---
source: crates/antlr-rust-codegen/src/generator/tests.rs
expression: "rendered_context_impl(&rendered, \"MixedContext\")"
---
        rule unary_children: many(UnaryContext[4]),
        rule param_children: many(ParamContext[8]),
        token in_token: optional(7),
        token comma_tokens: many(15),
        token lparen_token: required(16, "LPAREN"),
        token rparen_token: required(17, "RPAREN"),
        label_rule errors: many(skip(1), UnaryContext[4]),
        label_rule name: required(nth(0), UnaryContext[4], "name"),
