crates/antlr-rust-codegen/src/generator/snapshots/antlr_rust_codegen__generator__tests__multi_alternative_label_mixed_repetition_context.snap
---
source: crates/antlr-rust-codegen/src/generator/tests.rs
expression: "rendered_context_impl(&rendered, \"MixedRepetitionContext\")"
---

    pub fn star_token(&self) -> Option<TerminalNode<'a>> {
        __token_children(self.__node, 8)
            .next()
            .map(TerminalNode::new)
    }
    pub fn slash_token(&self) -> Option<TerminalNode<'a>> {
        __token_children(self.__node, 9)
            .next()
            .map(TerminalNode::new)
    }
    pub fn plus_tokens(&self) -> impl Iterator<Item = TerminalNode<'a>> + '_ {
        __token_children(self.__node, 11).map(TerminalNode::new)
    }
    pub fn minus_tokens(&self) -> impl Iterator<Item = TerminalNode<'a>> + '_ {
        __token_children(self.__node, 12).map(TerminalNode::new)
    }
    pub fn num_token(&self) -> Result<TerminalNode<'a>, MissingChildError> {
        __token_children(self.__node, 14)
            .next()
            .map(TerminalNode::new)
            .ok_or_else(|| MissingChildError::new("MixedRepetitionContext", "NUM"))
    }
    pub fn latest(&self) -> Result<TerminalNode<'a>, MissingChildError> {
        __labeled_token_children_matching(self.__node, &[8, 9, 11, 12])
            .skip(0).last()
            .map(TerminalNode::new)
            .ok_or_else(|| MissingChildError::new("MixedRepetitionContext", "latest"))
    }
}

#[allow(dead_code, clippy::all)]
impl<'a> MixedRepetitionContext<'a, ValidatedTreeContext> {
    pub fn star_token(&self) -> Option<TerminalNode<'a>> {
        __token_children(self.__node, 8)
            .next()
            .map(TerminalNode::new)
    }
    pub fn slash_token(&self) -> Option<TerminalNode<'a>> {
        __token_children(self.__node, 9)
            .next()
            .map(TerminalNode::new)
    }
    pub fn plus_tokens(&self) -> impl Iterator<Item = TerminalNode<'a>> + '_ {
        __token_children(self.__node, 11).map(TerminalNode::new)
    }
    pub fn minus_tokens(&self) -> impl Iterator<Item = TerminalNode<'a>> + '_ {
        __token_children(self.__node, 12).map(TerminalNode::new)
    }
    pub fn num_token(&self) -> TerminalNode<'a> {
        let Some(node) = __token_children(self.__node, 14).next() else {
            unreachable!("validated MixedRepetitionContext is missing required child NUM")
        };
        TerminalNode::new(node)
    }
    pub fn latest(&self) -> TerminalNode<'a> {
        let Some(node) = __labeled_token_children_matching(self.__node, &[8, 9, 11, 12])
            .skip(0).last()
        else {
            unreachable!("validated MixedRepetitionContext is missing required child latest")
        };
        TerminalNode::new(node)
    }
}
