crates/antlr-rust-codegen/src/generator/snapshots/antlr_rust_codegen__generator__tests__multi_alternative_label_mixed_repetition_followed_context.snap
---
source: crates/antlr-rust-codegen/src/generator/tests.rs
expression: "rendered_context_impl(&rendered, \"MixedRepetitionFollowedContext\")"
---

    pub fn star_tokens(&self) -> impl Iterator<Item = TerminalNode<'a>> + '_ {
        __token_children(self.__node, 8).map(TerminalNode::new)
    }
    pub fn slash_token(&self) -> Option<TerminalNode<'a>> {
        __token_children(self.__node, 9)
            .next()
            .map(TerminalNode::new)
    }
    pub fn plus_tokens(&self) -> impl Iterator<Item = TerminalNode<'a>> + '_ {
        __token_children(self.__node, 11).map(TerminalNode::new)
    }
    pub fn minus_tokens(&self) -> impl Iterator<Item = TerminalNode<'a>> + '_ {
        __token_children(self.__node, 12).map(TerminalNode::new)
    }
    pub fn num_token(&self) -> Result<TerminalNode<'a>, MissingChildError> {
        __token_children(self.__node, 14)
            .next()
            .map(TerminalNode::new)
            .ok_or_else(|| MissingChildError::new("MixedRepetitionFollowedContext", "NUM"))
    }
}

#[allow(dead_code, clippy::all)]
impl<'a> MixedRepetitionFollowedContext<'a, ValidatedTreeContext> {
    pub fn star_tokens(&self) -> impl Iterator<Item = TerminalNode<'a>> + '_ {
        __token_children(self.__node, 8).map(TerminalNode::new)
    }
    pub fn slash_token(&self) -> Option<TerminalNode<'a>> {
        __token_children(self.__node, 9)
            .next()
            .map(TerminalNode::new)
    }
    pub fn plus_tokens(&self) -> impl Iterator<Item = TerminalNode<'a>> + '_ {
        __token_children(self.__node, 11).map(TerminalNode::new)
    }
    pub fn minus_tokens(&self) -> impl Iterator<Item = TerminalNode<'a>> + '_ {
        __token_children(self.__node, 12).map(TerminalNode::new)
    }
    pub fn num_token(&self) -> TerminalNode<'a> {
        let Some(node) = __token_children(self.__node, 14).next() else {
            unreachable!("validated MixedRepetitionFollowedContext is missing required child NUM")
        };
        TerminalNode::new(node)
    }
}
