crates/antlr-rust-codegen/src/generator/snapshots/antlr_rust_codegen__generator__tests__multi_alternative_label_mixed_unbounded_context.snap
---
source: crates/antlr-rust-codegen/src/generator/tests.rs
expression: "rendered_context_impl(&rendered, name)"
---

    pub fn unary_children(&self) -> impl Iterator<Item = UnaryContext<'a>> + '_ {
        __rule_children(self.__node, 4)
            .map(move |node| UnaryContext::__from_child_node(node, self.__invocation_states.as_deref()))
    }
    pub fn in_token(&self) -> Result<TerminalNode<'a>, MissingChildError> {
        __token_children(self.__node, 7)
            .next()
            .map(TerminalNode::new)
            .ok_or_else(|| MissingChildError::new("MixedUnboundedContext", "IN"))
    }
}

#[allow(dead_code, clippy::all)]
impl<'a> MixedUnboundedContext<'a, ValidatedTreeContext> {
    pub fn unary_children(&self) -> impl Iterator<Item = UnaryContext<'a, ValidatedTreeContext>> + '_ {
        __rule_children(self.__node, 4)
            .map(move |node| UnaryContext::<ValidatedTreeContext>::__from_validated_child_node(node, self.__invocation_states.as_deref()))
    }
    pub fn in_token(&self) -> TerminalNode<'a> {
        let Some(node) = __token_children(self.__node, 7).next() else {
            unreachable!("validated MixedUnboundedContext is missing required child IN")
        };
        TerminalNode::new(node)
    }
}
