crates/antlr-rust-codegen/src/generator/snapshots/antlr_rust_codegen__generator__tests__multi_alternative_label_nested_group_context.snap
---
source: crates/antlr-rust-codegen/src/generator/tests.rs
expression: "rendered_context_impl(&rendered, \"NestedGroupContext\")"
---
        token ident_token: optional(13),
        token num_token: required(14, "NUM"),
        label_token deep: optional(nth(0), [13]),
